tests/ui/unsupported.stderr
error: unsupported by #[remain::sorted]
 --> tests/ui/unsupported.rs:7:9
  |
7 |         0..=20 => {}
  |         ^^^^^^
